# math-expr-eval

./: '  Cargo.toml  README.md  install.sh  test.mee
assets/: net.olback.MathExprEval.gresource.xml  net.olback.MathExprEval.gschema.xml
assets/css/: app.css
assets/ui/: main.glade  main.glade~
src/: error.rs  macros.rs  main.rs  ui.rs
