[package]
name = "math-expr-eval"
version = "0.1.0"
authors = ["Edwin Svensson <math-expr-eval@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
evalexpr = "6"
gtk = "0.9"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"

