[package]
name = "math-expr-eval"
version = "0.2.0"
authors = ["Edwin Svensson <math-expr-eval@olback.net>"]
edition = "2018"
build = "build/build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#evalexpr = { version = "6", features = [ "regex_support" ] }
evalexpr = { git = "https://github.com/olback/evalexpr", features = [ "regex_support" ], branch = "math-consts-functions" }
gtk = { version = "0.9", features = [ "v3_22_30" ] }
gio = "0.9"
gdk = "0.13"
glib = "0.10"
giftwrap = "0.1"

[build-dependencies]
regex = "1.3"
last-git-commit = "0.2"

